--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ DISABLE_STT=False
 # Gemini Configuration
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL=gemini-2.5-pro-preview-05-06
+
+# Local development bot token (optional)
+TELEGRAM_BOT_TOKEN_LOCAL=your_local_bot_token
