--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DISABLE_STT=False
 # Gemini Configuration
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL=gemini-2.5-pro-preview-05-06
+GEMINI_TTS_URL=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-pro-preview-tts:generateAudio
+DISABLE_TTS=False
 
 # Local development bot token (optional)
 TELEGRAM_BOT_TOKEN_LOCAL=your_local_bot_token
