--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,6 +38,7 @@ steps:
       '--allow-unauthenticated',
       '--memory', '1Gi',
       '--cpu', '1',
+      '--min-instances', '0',
       '--max-instances', '10',
       '--set-env-vars', 'TESTING=False'
     ]
